# iris

./: .gitignore  Cargo.toml  Cmate.toml  Makefile  README.md  output_image.txt
src/: .test.webp.swp  main.c  main.rs
src/install/: mod.rs
src/package_list/: mod.rs  package_list.rs  package_xz.rs
src/search/: search.rs
src/sync/: sync.rs
src/utils/: decomp.rs  download.rs  mirror.rs  mod.rs  path_list.rs
src/utils/macros/: errors.rs  mod.rs
