[package]
name = "iris"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.18.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
xz = "0.1.0"
